--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   
   /* Styles for the logo inside the header */
   header .logo {
- background-image: url(../"Apple_logo_PNG2.png");
+ background-image: url(./"Apple_logo_PNG2.png");
  /* Set the background image for the logo */
     background-size: 40px; /* Set the size of the logo image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
@@ -53,7 +53,7 @@
   
   /* Background image section styles */
   .bgm {
-    background-image: url(../"Screenshot 2023-08-07 231956.png"); /* Set the background image for the section */
+    background-image: url(./"Screenshot 2023-08-07 231956.png"); /* Set the background image for the section */
     background-size: cover; /* Make the background image cover the entire section */
     background-position: center; /* Center the background image within the section */
     background-repeat: no-repeat; /* Prevent the image from repeating */
