--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
   
   /* Background image section styles */
   .bgm {
-    background-image: url(https://github.com/DanishAbdullahPy/I-phone-specific-clone-site-1/blob/main/Screenshot%202023-08-07%20231956.png); /* Set the background image for the section */
+    background-image: url ("Screenshot 2023-08-07 231956.png"); /* Set the background image for the section */
     background-size: cover; /* Make the background image cover the entire section */
     background-position: center; /* Center the background image within the section */
     background-repeat: no-repeat; /* Prevent the image from repeating */
